--- a/src/examples/lecture/Makefile
+++ b/src/examples/lecture/Makefile
@@ -2,7 +2,7 @@ include ../make.inc
 
 INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${LAMA_ROOT}/include
 
-LD_FLAGS = -L${LAMA_ROOT}/lib -lama -Wl,-rpath=${LAMA_ROOT}/lib 
+LD_FLAGS = ${LAMA_LD_FLAGS} -Wl,-rpath=${LAMA_ROOT}/lib 
 
 EXECUTABLE: task0.exe task1a.exe task1b.exe task2.exe task2a.exe task3.exe task4.exe task5.exe
 
