--- a/src/examples/solver/Makefile
+++ b/src/examples/solver/Makefile
@@ -2,7 +2,7 @@ include ../make.inc
 
 INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${LAMA_ROOT}/include
 
-LD_FLAGS = -L${LAMA_ROOT}/lib -lama -Wl,-rpath=${LAMA_ROOT}/lib 
+LD_FLAGS = ${LAMA_LD_FLAGS} -Wl,-rpath=${LAMA_ROOT}/lib 
 
 EXECUTABLE: matrix_generator.exe cg_solver.exe jacobi_solver.exe amg_solver.exe gmres_solver.exe
 
