--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -153,8 +153,7 @@ if ( WIN32 )
     target_link_libraries ( lama_test ama )
 else ( WIN32 )
     if ( LAMA_LIBRARY_TYPE STREQUAL "STATIC" )
-        target_link_libraries ( lama_test "-Wl,--whole-archive" ama amampi "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
-        #SET_TARGET_PROPERTIES ( lama_test PROPERTIES LINK_FLAGS "-Wl,--whole-archive -l../lama/libama.a -Wl,--no-whole-archive")
+        target_link_libraries ( lama_test "-Wl,--whole-archive" ama "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
     else ()
         target_link_libraries ( lama_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
     endif ( LAMA_LIBRARY_TYPE STREQUAL "STATIC" )
