--- a/src/test/distributed/CMakeLists.txt
+++ b/src/test/distributed/CMakeLists.txt
@@ -104,5 +104,9 @@ add_executable ( lama_dist_test lama_dist_test.cpp ${CXX_SOURCES} )
 if ( WIN32 )
     target_link_libraries ( lama_dist_test ama )
 else ( WIN32 )
-    target_link_libraries ( lama_dist_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
+    if ( LAMA_LIBRARY_TYPE STREQUAL "STATIC" )
+        target_link_libraries ( lama_dist_test "-Wl,--whole-archive" ama amampi "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
+    else ()
+        target_link_libraries ( lama_dist_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
+    endif ( LAMA_LIBRARY_TYPE STREQUAL "STATIC" ) 
 endif ( WIN32 )
