--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -347,6 +347,6 @@ if ( LAMA_USE_CUDA AND NOT CUDA_FOUND )
 endif ( LAMA_USE_CUDA AND NOT CUDA_FOUND )
 
 # LAMA Test
-if ( LAMA_USE_CUDA AND NOT ( Boost_UNIT_TEST_FRAMEWORK_FOUND AND Boost_REGEX_FOUND ) )
+if ( LAMA_BUILD_TEST AND NOT ( Boost_UNIT_TEST_FRAMEWORK_FOUND AND Boost_REGEX_FOUND ) )
     message( FATAL_ERROR "Build of LAMA Test enabled, but configuration is incomplete!")
-endif ( LAMA_USE_CUDA AND NOT ( Boost_UNIT_TEST_FRAMEWORK_FOUND AND Boost_REGEX_FOUND ) )
+endif ( LAMA_BUILD_TEST AND NOT ( Boost_UNIT_TEST_FRAMEWORK_FOUND AND Boost_REGEX_FOUND ) )
