--- a/src/lama/mpi/CMakeLists.txt
+++ b/src/lama/mpi/CMakeLists.txt
@@ -36,6 +36,8 @@ lama_set_source_dir ()
 
 ### Add classes and header files ###
 set ( CLASSES
+        CUDAawareMPICommunicator
+        CUDAawareMPICommunicatorManager
         MPICommunicator
         MPICommunicatorManager
         MPIException
