Use now LAMA_THREAD_LIBRARY instead of Boost_THREAD_LIBRARY for linking

--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -202,8 +202,8 @@ endif( LAMA_BLAS_FOUND )
 
 # boost thread
 if ( NOT WIN32 )
-    set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${Boost_THREAD_LIBRARY} )
-    set ( ADDITIONAL_EXTERNAL_LINKER_FLAGS ${ADDITIONAL_EXTERNAL_LINKER_FLAGS} ${Boost_THREAD_LIBRARY} )
+    set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${LAMA_THREAD_LIBRARY} )
+    set ( ADDITIONAL_EXTERNAL_LINKER_FLAGS ${ADDITIONAL_EXTERNAL_LINKER_FLAGS} ${LAMA_THREAD_LIBRARY} )
 endif ( NOT WIN32 )
 
 # generate additional linker flags for the examples
