--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -153,9 +153,9 @@ if ( WIN32 )
     target_link_libraries ( lama_test ama )
 else ( WIN32 )
     if ( LAMA_LIBRARY_TYPE STREQUAL "STATIC" )
-        target_link_libraries ( lama_test "-Wl,--whole-archive" ama "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
+        target_link_libraries ( lama_test "-Wl,--whole-archive" ama "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${LAMA_THREAD_LIBRARY} )
     else ()
-        target_link_libraries ( lama_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
+        target_link_libraries ( lama_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${LAMA_THREAD_LIBRARY} )
     endif ( LAMA_LIBRARY_TYPE STREQUAL "STATIC" )
 endif ( WIN32 )
 
