Some minor changes and clarifications

--- a/src/lama/cuda/CMakeLists.txt
+++ b/src/lama/cuda/CMakeLists.txt
@@ -48,6 +48,7 @@ set ( CLASSES
         CUDALAPACK
         CUDAStreamSyncToken
         CUDASettings
+        CUDATexture
     )
 
 lama_classes ( ${CLASSES} )
