Scalar now used with lama::Complex<T>

--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -50,6 +50,7 @@ set ( CLASSES
         Communicator
         CommunicatorFactory
         CommunicatorManager
+        Complex
         Context
         ContextAccess
         ContextFactory
