AP1: remove LAMAArrayView and LAMAArrayConstView inserted MISSING (!) boost::cref and ref

--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -69,7 +69,7 @@ set ( CLASSES
         HostContext
         LAMAArray
         LAMAArrayUtils
-        LAMAArrayView
+#        LAMAArrayView
         LAMAInterface
         LAMAInterfaceRegistry
         NoCommunicator
