Added L1- and L2Norm to Matrix

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -92,6 +92,7 @@ set ( SOURCE_FILES
         LAMAArrayTest
         LAPACKTest
         MatrixStorageConversionTest
+		MatrixNormTest
         MatrixTest
         MaxNormTest
         NoCommunicatorTest
