Added first version of Richardson Solver

--- a/src/lama/solver/CMakeLists.txt
+++ b/src/lama/solver/CMakeLists.txt
@@ -56,6 +56,7 @@ set ( CLASSES
         InverseSolver
         IterativeSolver
         OmegaSolver
+	Richardson
         SimpleAMG
         SingleGridSetup
         SolutionProxy
