First version of TFQMR-solver

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -107,6 +107,7 @@ set ( SOURCE_FILES
         SpecializedJacobiTest
         StorageIOTest
         TaskSyncTokenTest
+	TFQMRTest
         ThreadPoolTest
         TimerTest
         TracingTest
