--- a/tracing/examples/CMakeLists.txt
+++ b/tracing/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_definitions( -DLAMA_TRACE_LEVEL_TIME )
+add_definitions( -DLAMA_TRACE_LEVEL_ON )
 
 add_executable( TraceTest TraceTest.cpp )
 target_link_libraries( TraceTest ${TRACING_LIBRARY} )
